fixed the contrast in the pages which needed it

--- a/frontend/src/components/UserProfile/FavoritesOffers.scss
+++ b/frontend/src/components/UserProfile/FavoritesOffers.scss
@@ -12,7 +12,7 @@
     background-color: $secondary-color-two;
 
     &:nth-child(2n) {
-      background-color: $secondary-color-three;
+      background-color: $secondary-color-four;
     }
 
     img {
